--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "replicate": "^1.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
